# probe-rhythm-study

./: .gitignore  README.md  design.md  tmp.csd
probe-rhythm-stimuli/: probe-rhythm-stimuli.cabal  stack.yaml
probe-rhythm-stimuli/.stack-work/install/x86_64-osx/lts-6.15/7.10.3/flag-cache/: Boolean-0.2.3-5bc2f39b075dad79648723de53681130  QuickCheck-2.8.2-689294ba274b5a3ef051e2a1626c397e  clock-0.7.2-6032850f9c48bef25c034758722cb326  colour-2.3.3-0c4e3735159b357562a94a22fd309019  csound-catalog-0.5.0-ca75b7cbd0250e9475de14456dd72516  csound-expression-5.0.1-dce359d0fbcfdf54507dd6ad5f9ceab3  csound-expression-dynamic-0.1.6-efcd1600d0c14aba18450aeae9862247  csound-expression-opcodes-0.0.3.1-d41f244c86672d508ca83e2206c5db8f  csound-expression-typed-0.0.9.3-5824d03a6497db7f3fc3190b5ff6c86c  csound-sampler-0.0.6.5-6579c1de196e3a71ca962d5f8ffbd7c7  data-default-0.5.3-4c4f075845d560f7a31d444f67905db9  data-default-class-0.0.1-fcbab95490d730dd2489b628499587cd  data-default-instances-base-0.1.0-67c5dab7bf7e1af8ea85f9c171d30ddb  data-default-instances-containers-0.0.1-d3ea0d3c9fccc20a134b21cbb35cf507  data-default-instances-dlist-0.0.1-ce19b3a74b554c96a2b0be7541be0f20  data-default-instances-old-locale-0.0.1-11796fe51f868bb456c3e6d409bfcc3f  data-fix-0.0.3-f438d99bed36218ecd6e68aba471914b  data-fix-cse-0.0.2-1593957e455064545e9ef2a2b9879729  double-conversion-2.0.1.0-4926f2b71afc650c95f2a4fe79b83108  formatting-6.2.2-0e6be89ab16001323b9e8aea6f65650d  probe-rhythm-stimuli-0.1.0.0-10ba51ff1f1826c92894ad8c99c08164  probe-rhythm-stimuli-0.1.0.0-567bcfd2f198ffabea2dc543305efd43  repa-3.4.1.1-db6d05ab73dc5eee2af50725c7b3b7ad  sharc-timbre-0.2-70a4a4203d285d8f5e73c786930ed7f4  temporal-media-0.6.1-6cd22a3820c742ddfcd54bb00fbcf324  temporal-music-notation-0.4.1-aa4bf852602ff395ee56910634402e20  (+3 more)
probe-rhythm-stimuli/app/: Main.hs
probe-rhythm-stimuli/data/: periods.csv  tmp.csd
probe-rhythm-stimuli/src/: Lib.hs
(+482 files in other folders)
