name:                probe-rhythm-stimuli
version:             0.1.0.0
synopsis:            Stimuli for Hadrava & Bahnik (2016)
description:         Please see README.md
homepage:            https://github.com/kitharoidos/probe-rhythm-study.git
license:             BSD3
license-file:        LICENSE
author:              Michal Hadrava
maintainer:          mihadra@gmail.com
copyright:           2016 Michal Hadrava
category:            Music
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , formatting
                     , repa
                     , temporal-music-notation
                     , csound-expression
                     , csound-catalog
                     , random
  default-language:    Haskell2010

executable probe-rhythm-stimuli-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , probe-rhythm-stimuli
                     , formatting
                     , random
                     , repa
                     , temporal-music-notation
                     , csound-expression
                     , cassava
                     , bytestring
  default-language:    Haskell2010

test-suite probe-rhythm-stimuli-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , probe-rhythm-stimuli
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/probe-rhythm-stimuli
